--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-   "name": "typeorm-sample",
+   "name": "typescript-postgres-auth",
    "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
+   "description": "basic user registration and login using typescript and postgresql",
    "type": "commonjs",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
       "@types/jest": "^29.5.10",
       "@types/node": "^16.11.10",
       "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "bcrypt": "^5.1.1",
       "body-parser": "^1.19.1",
       "express": "^4.17.2",
       "express-validator": "^7.0.1",
