--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/bcrypt": "^5.0.2",
+      "@types/express": "^4.17.21",
       "@types/jest": "^29.5.10",
+      "@types/jsonwebtoken": "^9.0.5",
       "@types/node": "^16.11.10",
       "dotenv": "^16.3.1",
       "jest": "^29.7.0",
@@ -21,6 +23,7 @@
       "body-parser": "^1.19.1",
       "express": "^4.17.2",
       "express-validator": "^7.0.1",
+      "jsonwebtoken": "^9.0.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
