--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "@types/jest": "^29.5.10",
       "@types/jsonwebtoken": "^9.0.5",
       "@types/node": "^16.11.10",
+      "@types/supertest": "^2.0.16",
       "dotenv": "^16.3.1",
       "jest": "^29.7.0",
       "morgan": "^1.10.0",
@@ -29,10 +30,11 @@
       "typeorm": "0.3.17"
    },
    "scripts": {
-      "start": "node dist/src/index.js",
+      "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "dev": "nodemon -w *.ts  -w .env src/index.ts",
       "test": "jest",
+      "test:clean": "jest --clearCache",
       "build": "tsc"
    }
 }
